--- a/View.html
+++ b/View.html
@@ -32,7 +32,7 @@ child-src *;
      </ul>
 </nav>
 </header>
-<aside id="favourite">Favourites:<button id="clear">Remove All</button>
+<aside id="favourite">Drag and Drop the Names into this box to save them<button id="clear">Remove All</button>
 <ul id="resorts"></ul>
 </aside>
 <br><br>
